fix: align the buttons to the center of the header

--- a/src/app/modules/tournament-management/components/tournament-card/tournament-card.component.scss
+++ b/src/app/modules/tournament-management/components/tournament-card/tournament-card.component.scss
@@ -23,8 +23,8 @@ $badge-background-color: rgba(255, 255, 255, 0.05);
 	.header {
 		display: flex;
 		flex-direction: row;
-
 		justify-content: space-between;
+		align-items: center;
 
 		.information {
 			display: flex;
